--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,10 @@
-  #nick{
-    color:blue;
-    size:25px;
-    font:Arial;
-  }
+#nick{
+  color:blue;
+  font-size:25px;
+  font-family:Arial;
+}
   
-  #title{
-    border:3px solid bold;
-    border-radius:5px;
-  }
+#title{
+  border:3px solid black;
+  border-radius:5px;
+}
